--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "myownrecipe",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -11,16 +11,33 @@
     "bootstrap": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-openid-connect": "^2.9.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
+    "node.js": "^0.0.1-security",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/huedaoit/myOwnRecipe.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/huedaoit/myOwnRecipe/issues"
+  },
+  "homepage": "https://github.com/huedaoit/myOwnRecipe#readme",
+  "description": ""
 }
