--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "agent-base": "^6.0.1",
     "body-parser": "^1.20.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0",
@@ -15,17 +16,21 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-jwt": "^7.7.7",
+    "express-jwt-authz": "^2.4.1",
     "express-openid-connect": "^2.9.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
+    "jwks-rsa": "^2.1.5",
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
     "node.js": "^0.0.1-security",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "stripe": "^10.16.0"
   },
   "main": "app.js",
   "repository": {
@@ -39,5 +44,8 @@
     "url": "https://github.com/huedaoit/myOwnRecipe/issues"
   },
   "homepage": "https://github.com/huedaoit/myOwnRecipe#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "axios": "^1.1.3"
+  }
 }
