--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-flash": "^0.0.2",
     "express-jwt": "^7.7.7",
     "express-jwt-authz": "^2.4.1",
@@ -30,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "sharp": "^0.31.2",
     "stripe": "^10.16.0"
   },
   "main": "app.js",
@@ -46,6 +48,9 @@
   "homepage": "https://github.com/huedaoit/myOwnRecipe#readme",
   "description": "",
   "devDependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "jest": "^29.3.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   }
 }
